# Progetto_esame_IngeSoft

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: SPECIFICA.md
mutants/: mutmut-stats.json  pyproject.toml
mutants/src/zmtransform/: __init__.py  analysis.py  cli.py  gui.py  models.py
mutants/tests/: conftest.py
mutants/tests/unit/: test_analysis.py
src/zmtransform/: __init__.py  analysis.py  cli.py  gui.py  models.py  plot.py
tests/integration/: test_batch_pipeline.py
tests/unit/: test_analysis.py
